css/styles.css
.svglogo {
	width: 25%;
    padding: 1rem;
	margin-top: 2rem;
    order: -1;
    
/*
	background-image: asset-url('main-logo.png') no-repeat;
	background-size: 100%;
*/
}

.headerimg {
  width: 50%;
  flex-shrink: 1;
}

#container-fluid {
	margin-bottom: 1%;
}

.flex-container{
  display: -webkit-flex;
  display: flex;
 -webkit-flex-flow: row wrap;
  flex-flow: row wrap;
  padding: 1%;
}

.flex-container2{
  display: -webkit-flex;
  display: flex;
 -webkit-flex-flow: column wrap;
  flex-flow: column wrap;
  padding: 1%;
}

.item{
  margin: auto;
  width:auto;

}


.item1{
  margin: auto;
  order: -1;
  width: auto;
}

.item2{
  order: 1;
  width: auto%;
  
}

.item3{
  align-items: center;
  order: 1;
  margin: auto;
  width: auto; 
  padding-top: 5px;
  padding-bottom: 5px;
}

.actions {
	padding: 1rem;
}

.field {
	padding: 1rem;
}

.tabContent {
  padding:20px;
}

/* Typography */
body{
	font-family: 'Raleway', sans-serif;
	font-weight: 100, 400, 800;
	text-align: center;
  
}

h1 {
	font-family: 'Rozha One', serif;
	color: #55b0e6;
    font-size: 4em;	
}

h2 {
  font-family: 'Rozha One', serif;
  color: #B71C1C;
  font-size: 3em;
}

h3 {
  font-family: 'Rozha One', serif;
  color: #FFFFFF;
  font-size: 3em;
}

h4, .panel-title {
	font-family: 'Rozha One', serif;
	color: #55b0e6;
    font-size: 2.25em;	
}

a, ul.nav li a:visited {
	color: #B71C1C;
}

ul {
	list-style-type: none;
}


li {
    align-items: stretch;
	margin: 3em;
}

.candidate-block {
	display: inline-block;
	margin: 2%;

}

.candidate-block li {
	margin: 0;
	list-style: none;
	font-size: 1.5em;
}


.section-title h2 {
	color: #B71C1C;

    font-size: 3em;
    
}

.section-title h3 {
	color: white;
	margin: 0, 5%;
    
}

.date {
	color: #B71C1C;;
}

p {
	font-size: 1.5em;
}

p2 {
	font-size: 1.5em;
    color: white;
    margin-top: 20px;
}



.presidential, img {
  width: 99%;
}

headerimg {
	flex-grow: 3,0,0;
  -webkit-flex-grow: 3, 0, 0;
    width: auto;
   
}

.btn-default {
	background-color: #B71C1C;
	color: #fff;
}

.btn-xlarge {
    padding: 1em;
    font-size: 1.5em;
    line-height: normal;
    -webkit-border-radius: 1%;
       -moz-border-radius: 1%;
            border-radius: 1%;
}

.btn-xlargebl {
    padding: 1em;
    font-size: 1.5em;
    line-height: normal;
    -webkit-border-radius: 1%;
       -moz-border-radius: 1%;
            border-radius: 1%;
    background-color: white;
    color: #B71C1C;
}

/* Content Sections*/

.content-block {
	display: inline-block;
	margin: 2em;
  
}

.contentblue {
  background-color: #55b0e6;
  
}

.contentred {
  background-color: #B71C1C;
  padding: 1em; 
  border-radius: 5px;
}

.header {
	padding: 2%;
    flex-shrink: 2;
    -webkit-flex-shrink: 2;
}

/* Media Queries */

@media (max-width: 100%) {
	.jumbotron {
		padding: 80px 0 80px 0;
	}

	.content {
		padding-top: 190px;
		}

	./*ft-copy {
		padding-top: 2rem;
	}*/
	.ft-copy {
		width: auto;
	}

@media (max-width: 767px) {
	.navbar {
		min-height: 60px;
	}
	.main-logo {
		width: 82px;
		margin-top: 20px;
	}
	.jumbotron {
		padding-top: 80px;
		margin-top: 32px;
		margin-bottom: 32px;
	}

	.container {
		padding: 1em;
		}

	.panel {
	padding: 1rem;
	margin-top: 1rem;
	}

  .panel-body{
    font-size: 1.25rem;
  }
  
  
	.lead {
		margin-bottom: 40px;
	}
	.ft {
		margin-bottom: 16px;
	}

